<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">高球生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_get_city">当前城市</string>
    <string name="action_month">月份</string>
    <string name="action_create">新建</string>
    <string name="action_bar_search">搜索</string>

    <!-- MainActivity -->
    <string name="court">球场</string>
    <string name="account">账户</string>
    <string name="find">发现</string>

    <!-- other -->
    <string name="preferential">特惠</string>
    <string name="combo">套餐</string>
    <string name="trip">行程</string>
    <string name="sale">精挑细选</string>
    <string name="card_pack">我的卡包</string>
    <string name="ranking">英雄榜</string>
    <string name="competition">赛事</string>
    <string name="merchant">特约商户</string>
    <string name="handicaps">个人差点档案</string>
    
    <string name="BookTrip">预定行程</string>
    <string name="ApplyGame">赛事报名</string>
    

    <!-- 成绩 -->
    <string name="score">成绩</string>
    <string name="scorelist">成绩列表</string>
    <string name="new_score">新成绩单</string>
    <string name="score_info">成绩单简介</string>
    <string name="score_details">新成详情</string>
    <string name="input_team_members">输入队友</string>
    <string name="input_court_name">输入球场名称</string>

    <!-- 用户信息 -->
    <string name="account_manager">账户管理</string>
    <string name="register">注册</string>
    <string name="register_title">用户注册</string>
    <string name="register_success">感谢注册“青之鸟高尔夫”，您的注册手机号是%1$s。</string>
    <string name="login">登录</string>
    <string name="login_title">用户登录</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="newpassword">新密码</string>
    <string name="username">姓名</string>
    <string name="email">Email</string>
    <string name="vipcard">VIP卡</string>
    <string name="vip">VIP</string>
    <string name="order_to_pay">待支付订单</string>
    <string name="hint_input_phone_number">请输入手机号码</string>
    <string name="hint_password_length">6至16位密码</string>
    <string name="hint_username">请输入用户姓名</string>
    <string name="hint_email">请输入电子邮箱地址</string>
    <string name="hint_vip">VIP卡号，没有可不填</string>
    <string name="sms_code">验证码</string>
    <string name="account_recharge">账户充值</string>
    <string name="account_transfer">转账</string>
    <string name="account_withdraw">余额提现</string>
    <string name="balance">账户余额</string>
    <string name="consumption_details">消费明细</string>
    <string name="account_changepwd">修改密码</string>
    <string name="account_has_chang_pwd">完成修改密码</string>
    <string name="account_my_flea">我的寄卖</string>
    <string name="account_my_score">我的成绩</string>
    <string name="account_my_estimate">我的评论</string>
    <string name="account_logout">退出账户</string>

    <!-- 寄卖 -->
    <string name="flee_new_good_title">输入标题</string>
    <string name="flee_new_good_desc">简要描述寄卖货品</string>
    <string name="flee_new_good_price">输入价格，单位：元</string>
    <string name="flee_new_good_contact">输入联系人</string>
    <string name="flee_new_good_phone">输入联系电话</string>
    <string name="flee_action_new">新建</string>
    <string name="flee_action_edit">编辑</string>
    <string name="flee_action_del">删除</string>
    <string name="flee_cancel_good">取消寄卖</string>
    <string name="flee_cancel_good_sucess">您的寄卖物品已经下架。</string>
    <string name="flee_if_cancel_good">是否把此寄卖物品下架？</string>
    <string name="no_sdcard">SD卡不可用</string>

    <!-- 球场搜索 -->
    <string name="search_court">搜索球场</string>
    <string name="city">城市</string>
    <string name="playdate">打球日期</string>
    <string name="playtime">打球时间</string>
    <string name="keyword">关键字</string>
    <string name="name_of_court">球场名称</string>
    <string name="current_position">当前位置</string>
    <string name="court_info">球场详情</string>
    <string name="court_list">球场列表</string>
    <string name="court_model">球场模式</string>
    <string name="court_creat_date">建立时间</string>
    <string name="court_area">球场面积</string>
    <string name="court_greengrass">果岭草种</string>
    <string name="court_data">球场数据</string>
    <string name="court_designer">设计师</string>
    <string name="court_fairway_length">球道长度</string>
    <string name="court_fairway_grass">球场草种</string>
    <string name="court_facilities">球场设施</string>
    <string name="court_phone">球场电话</string>
    <string name="court_comment">球场评价</string>
    <string name="court_brief">球场介绍</string>
    <string name="court_fairway_imags">球道图片</string>
    <string name="court_facilities_imags">周边商户</string>
    <string name="trip_imags">图片:</string>

    <!-- order -->
    <string name="order_manager">订单管理</string>
    <string name="order">订单</string>
    <string name="order_successful">订单提交成功！</string>
    <string name="order_psy_successful">订单支付成功！</string>
    <string name="estimat_court_successful">完成评论。</string>
    <string name="refund">退款</string>
    <string name="is_refund">是否退款？</string>
    <string name="cancel_order">撤销订单</string>
    <string name="is_cancel_order">是否撤销订单？</string>
    <string name="pay">支付</string>
    <string name="is_pay">是否支付？</string>

    <!-- 赛事 -->
    <string name="comptition">赛事</string>

    <!-- 通用 -->
    <string name="note">提示</string>
    <string name="cancel">取消</string>
    <string name="no_sd_card">找不到SD卡</string>
    <string name="confirm">确定</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="exit">退出</string>
    <string name="is_exit">是否退出？</string>
    <string name="network_time_out">网络连接超时</string>
    <string name="retry">重试</string>
    <string name="network">网络</string>
    <string name="photo">拍照</string>
    <string name="network_disconnect">网络已断开</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="if_delete">是否删除照片？</string>
    <string name="edit">编辑</string>
    <string name="detail">详情</string>
    
    <string name="NoImg">暂时没有图片</string>
    <string name="NoCard">暂时没有卡片数据</string>
    <string name="NoData">暂时没有数据</string>
    <string name="NoGame">暂时没有赛事</string>

    <!-- XListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>