<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/login_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/block_background"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- 账号 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_vertical" >

            <TextView
                style="@style/AccountRegisterTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/loginid_edit"
                style="@style/AccountLoginEditText"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/hint_input_phone_number"
                android:inputType="phone"
                android:maxLength="15" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@drawable/block_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_vertical" >

            <TextView
                style="@style/AccountRegisterTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_edit"
                style="@style/AccountLoginEditText"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/hint_password_length"
                android:inputType="textPassword"
                android:maxLength="20" />
        </LinearLayout>
        
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@drawable/block_divider" />
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_vertical" >

            <TextView
                style="@style/AccountRegisterTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username_edit"
                style="@style/AccountLoginEditText"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/hint_username"
                android:maxLength="20" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@drawable/block_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_vertical" >

            <TextView
                style="@style/AccountRegisterTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_edit"
                style="@style/AccountLoginEditText"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/hint_email"
                android:maxLength="20" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@drawable/block_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_vertical" >

            <TextView
                style="@style/AccountRegisterTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vipcard" />

            <EditText
                android:id="@+id/vip_edit"
                style="@style/AccountLoginEditText"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/hint_vip"
                android:inputType="number"
                android:maxLength="20" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:padding="10dip"
        android:orientation="horizontal" >

        <Button
            style="@style/OrangeButton"
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"/>
        
    </LinearLayout>

</LinearLayout>