<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/login_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_background"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- 账号 -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_vertical" >

            <TextView
                style="@style/AccountLoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/login_input_id"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/loginid_edit"
                style="@style/AccountLoginEditText"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/hint_input_phone_number"
                android:inputType="phone"
                android:text="18653157591"
                android:maxLength="20" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@drawable/block_divider" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_vertical" >

            <TextView
                style="@style/AccountLoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/login_input_password"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_edit"
                style="@style/AccountLoginEditText"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/hint_password_length"
                android:inputType="textPassword"
                android:text="111111"
                android:maxLength="20" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#000000" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>